--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 
 
   <div style="text-align:center; background-color:chartreuse">  
-    <a href="index2.html">Leaflet-Step-1</a>
+    <a href="index.html">Leaflet-Step-2</a>
   </div>
 
   <!-- The div that holds our map -->
@@ -28,7 +28,6 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
   <!-- Our JavaScript -->
   <script type="text/javascript" src="static/js/config.js"></script>
-  <!--<script type="text/javascript" src="static/js/logic.js"></script>-->
-  <script type="text/javascript" src="static/js/logic2.js"></script>
+  <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
 </html>
